update with pub doc
Signed-off-by: Paul Czarkowski <username.taken@gmail.com>

--- a/docs/aro/astronomer/values-public.yaml
+++ b/docs/aro/astronomer/values-public.yaml
@@ -59,7 +59,7 @@ nginx:
   # IP address the nginx ingress should bind to
   loadBalancerIP: ~
   #  Set to 'true' when deploying to a private cluster
-  privateLoadBalancer: True
+  privateLoadBalancer: False
 
   # Dict of arbitrary annotations to add to the nginx ingress. For full configuration options, see https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/advanced-configuration-with-annotations/
   ingressAnnotations: {}
