--- a/.github/workflows/github-actions-spellcheck.yaml
+++ b/.github/workflows/github-actions-spellcheck.yaml
@@ -9,5 +9,5 @@ jobs:
     - uses: rojopolis/spellcheck-github-actions@0.14.0
       name: Spellcheck
       with:
-        config_path: config/.spellcheck.yml
+        config_path: .github/config/.spellcheck.yml
         task_name: Markdown
