--- a/.github/config/.spellcheck.yml
+++ b/.github/config/.spellcheck.yml
@@ -11,6 +11,9 @@ matrix:
   - pyspelling.filters.markdown:
   - pyspelling.filters.html:
     comments: false
+    attributes:
+    - li
+    - ul
     ignores:
     - code
     - pre
