update config because james told me to
Signed-off-by: Paul Czarkowski <username.taken@gmail.com>

--- a/docs/aro/clf-to-azure/manifests/config.yaml
+++ b/docs/aro/clf-to-azure/manifests/config.yaml
@@ -25,7 +25,7 @@ data:
         Match           *.*
         Customer_ID     ${WorkspaceId}
         Shared_Key      ${SharedKey}
-        Log_Type        ${LogName}
+        Log_Type        fluentbit
 
   input-kubernetes.conf: |
     [INPUT]
