update docs with inline resources
Signed-off-by: Paul Czarkowski <username.taken@gmail.com>

--- a/docs/aro/clf-to-azure/manifests/clf.yaml
+++ b/docs/aro/clf-to-azure/manifests/clf.yaml
@@ -7,7 +7,7 @@ spec:
   outputs:
    - name: fluentbit
      type: fluentdForward
-     url: 'tcp://fluent-bit.log-test:24224'
+     url: 'tcp://fluent-bit.azure-log-forwarding:24224'
   pipelines:
    - name: forward-to-fluentbit
      inputRefs:
