--- a/docs/aro/clf-to-azure/manifests/account.yaml
+++ b/docs/aro/clf-to-azure/manifests/account.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: log-test
+  name: azure-log-forwarding
 ---
 
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: fluent-bit
-  namespace: log-test
+  namespace: azure-log-forwarding
 ---
 
 kind: ClusterRole
@@ -37,5 +37,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: fluent-bit
-  namespace: log-test
+  namespace: azure-log-forwarding
 
