--- a/docs/aro/clf-to-azure/manifests/config.yaml
+++ b/docs/aro/clf-to-azure/manifests/config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: fluent-bit-config
-  namespace: log-test
+  namespace: azure-log-forwarding
   labels:
     k8s-app: fluent-bit
 data:
