--- a/docs/aro/clf-to-azure/manifests/fluentbit-daemonset.yaml
+++ b/docs/aro/clf-to-azure/manifests/fluentbit-daemonset.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: fluent-bit
-  namespace: log-test
+  namespace: azure-log-forwarding
   labels:
     k8s-app: fluent-bit-logging
     version: v1
@@ -28,37 +28,27 @@ spec:
       - name: fluent-bit
         image: fluent/fluent-bit:1.6
         imagePullPolicy: Always
-
         ports:
           - containerPort: 2020
           - containerPort: 24224
-
         env:
         - name: WorkspaceId
           valueFrom:
             secretKeyRef:
               name: fluentbit-secrets
               key: WorkspaceId
-
         - name: SharedKey
           valueFrom:
             secretKeyRef:
               name: fluentbit-secrets
               key: SharedKey
-
         - name: LogName
           value: logapp
-
         volumeMounts:
           - name: fluent-bit-etc
             mountPath: /fluent-bit/etc/
-
       volumes:
       - name: fluent-bit-etc
         configMap:
             name: fluent-bit-config
 
-      # tolerations:
-      # - key: node-role.kubernetes.io/master
-      #   operator: Exists
-      #   effect: NoSchedule
