update metrics to cloudwatch doc
Signed-off-by: Paul Czarkowski <username.taken@gmail.com>

--- a/docs/rosa/metrics-to-cloudwatch-agent/cloud-watch.yaml
+++ b/docs/rosa/metrics-to-cloudwatch-agent/cloud-watch.yaml
@@ -18,7 +18,8 @@ data:
   cwagentconfig.json: |
     {
       "agent": {
-        "region": "{{region_name}}"
+        "region": "{{region_name}}",
+        "debug": true
       },
       "logs": {
         "metrics_collected": {
