update sts docs to simplify install (#86)
* update sts docs to simplify install

Signed-off-by: Paul Czarkowski <username.taken@gmail.com>

* update sts-pl doc

Signed-off-by: Paul Czarkowski <username.taken@gmail.com>

* fix delete role/oidc commands

Signed-off-by: Paul Czarkowski <username.taken@gmail.com>

* fix last updated date

Signed-off-by: Paul Czarkowski <username.taken@gmail.com>

* move spellcheck to PRs

Signed-off-by: Paul Czarkowski <username.taken@gmail.com>

* disable spellcheck

Signed-off-by: Paul Czarkowski <username.taken@gmail.com>

--- a/.github/workflows/github-actions-spellcheck.yaml
+++ b/.github/workflows/github-actions-spellcheck.yaml
@@ -1,14 +1,17 @@
-name: Spellcheck Action
-on: push
-jobs:
-  build:
-    name: Spellcheck
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    steps:
-    - uses: actions/checkout@master
-    - uses: rojopolis/spellcheck-github-actions@0.16.0
-      name: Spellcheck
-      with:
-        config_path: .github/config/.spellcheck.yml
-        task_name: Markdown
+# name: Spellcheck Action
+# on:
+#   pull_request:
+#     paths:
+#     - '**.md'
+# jobs:
+#   build:
+#     name: Spellcheck
+#     runs-on: ubuntu-latest
+#     continue-on-error: true
+#     steps:
+#     - uses: actions/checkout@master
+#     - uses: rojopolis/spellcheck-github-actions@0.16.0
+#       name: Spellcheck
+#       with:
+#         config_path: .github/config/.spellcheck.yml
+#         task_name: Markdown
