--- a/.github/workflows/github-actions-lint.yaml
+++ b/.github/workflows/github-actions-lint.yaml
@@ -4,9 +4,11 @@ on:
     paths:
     - '**.md'
 jobs:
-    markdownlint-cli:
-        runs-on: ubuntu-latest
-        steps:
-        - uses: nosborn/github-action-markdown-cli@v1.1.1
+  lint:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Check out code
+          uses: actions/checkout@v2
+        - uses: nosborn/github-action-markdown-cli@v2.0.0
           with:
             files: .
