--- a/.github/workflows/github-actions-spellcheck.yaml
+++ b/.github/workflows/github-actions-spellcheck.yaml
@@ -1,17 +1,18 @@
-# name: Spellcheck Action
-# on:
-#   pull_request:
-#     paths:
-#     - '**.md'
-# jobs:
-#   build:
-#     name: Spellcheck
-#     runs-on: ubuntu-latest
-#     continue-on-error: true
-#     steps:
-#     - uses: actions/checkout@master
-#     - uses: rojopolis/spellcheck-github-actions@0.16.0
-#       name: Spellcheck
-#       with:
-#         config_path: .github/config/.spellcheck.yml
-#         task_name: Markdown
+name: Spellcheck
+on:
+  pull_request:
+    paths:
+    - '**.md'
+jobs:
+  spellcheck:
+    name: Spellcheck
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+    - uses: rojopolis/spellcheck-github-actions@0.16.0
+      name: Spellcheck
+      with:
+        config_path: .github/config/.spellcheck.yml
+        task_name: Markdown
