--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 Gemfile.lock
 _site
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
