fix cluster monitoring remotewrite
Signed-off-by: Paul Czarkowski <username.taken@gmail.com>

--- a/docs/aro/federated-metrics/user-workload-monitoring-config.yaml
+++ b/docs/aro/federated-metrics/user-workload-monitoring-config.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: openshift-user-workload-monitoring
 data:
   config.yaml: |
-    kubernetes:
+    prometheus:
       remoteWrite:
         - url: "http://thanos-receive.thanos-receiver.svc.cluster.local:9091/api/v1/receive"
