--- a/docs/rosa/federated-metrics/user-workload-monitoring-config.yaml
+++ b/docs/rosa/federated-metrics/user-workload-monitoring-config.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: openshift-user-workload-monitoring
 data:
   config.yaml: |
-    kubernetes:
+    prometheus:
       remoteWrite:
         - url: "http://thanos-receive.thanos-receiver.svc.cluster.local:9091/api/v1/receive"
