--- a/docs/security/secrets-store-csi/aws-provider-installer.yaml
+++ b/docs/security/secrets-store-csi/aws-provider-installer.yaml
@@ -58,10 +58,10 @@ spec:
       hostNetwork: true
       containers:
         - name: provider-aws-installer
-          image: public.ecr.aws/aws-secrets-manager/secrets-store-csi-driver-provider-aws:1.0.r2-2021.08.13.20.34-linux-amd64
+          image: public.ecr.aws/aws-secrets-manager/secrets-store-csi-driver-provider-aws:1.0.r2-6-gee95299-2022.04.14.21.07
           imagePullPolicy: Always
           args:
-              - --provider-volume=/var/run/secrets-store-csi-providers
+              - --provider-volume=/etc/kubernetes/secrets-store-csi-providers
           resources:
             requests:
               cpu: 50m
@@ -70,7 +70,7 @@ spec:
               cpu: 50m
               memory: 100Mi
           volumeMounts:
-            - mountPath: "/var/run/secrets-store-csi-providers"
+            - mountPath: "/etc/kubernetes/secrets-store-csi-providers"
               name: providervol
             - name: mountpoint-dir
               mountPath: /var/lib/kubelet/pods
@@ -78,7 +78,7 @@ spec:
       volumes:
         - name: providervol
           hostPath:
-            path: "/var/run/secrets-store-csi-providers"
+            path: "/etc/kubernetes/secrets-store-csi-providers"
         - name: mountpoint-dir
           hostPath:
             path: /var/lib/kubelet/pods
