--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,8 +29,9 @@ jobs:
 #       run: gem install html-proofer && htmlproofer public --disable-external
 
     - name: Deploy
-      if: success() && github.ref == 'refs/heads/hugo'
+      if: success() && github.ref == 'refs/heads/main'
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./public
+        cname: mobb.ninja
