--- a/.github/workflows/github-actions-deploy.yaml
+++ b/.github/workflows/github-actions-deploy.yaml
@@ -27,7 +27,7 @@ jobs:
 #       run: gem install html-proofer && htmlproofer public --disable-external
 
     - name: Deploy
-      if: success() && github.ref == 'refs/heads/main'
+      if: success() && github.ref == 'refs/heads/hugo'
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
