--- a/config.toml
+++ b/config.toml
@@ -91,4 +91,9 @@ weight = 20
 [[menu.shortcuts]]
 name = "<i class='fas fa-fw fa-tags'></i> Tags"
 url = "tags/"
+weight = 40
+
+[[menu.shortcuts]]
+name = "<i class='fas fa-fw fa-user-md'></i> Contact Us"
+url= "https://www.redhat.com/en/contact"
 weight = 30
