--- a/.github/workflows/github-actions-deploy.yaml
+++ b/.github/workflows/github-actions-deploy.yaml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
