feat: initial pass at new rhds theme

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = 'https://mobb.ninja/'
 languageCode = 'en-us'
 title = 'Managed OpenShift Black Belt - Unofficial Documentation'
-theme = "relearn"
+theme = "rhds"
 DefaultContentLanguage = "en"
 pygmentsCodeFences = true
 pygmentsStyle = "monokai"
