fix: swap code hightlight theme

--- a/config.toml
+++ b/config.toml
@@ -61,7 +61,7 @@ lineNoStart = 1
 lineNos = false
 lineNumbersInTable = true
 noClasses = true
-style = "monokai"
+style = "emacs"
 tabWidth = 2
 
 [markup]
