--- a/netlify.toml
+++ b/netlify.toml
@@ -16,10 +16,10 @@
     HUGO_ENV = "production"
 
 [context.deploy-preview]
-  command = "hugo --gc --minify --buildFuture -b ${DEPLOY_PRIME_URL}/experts/"
+  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy]
-  command = "hugo --gc --minify -b ${DEPLOY_PRIME_URL}/experts/"
+  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
 
 [context.next.environment]
   HUGO_ENABLEGITINFO = "true"
