fix: add redirect of rosa prereq-list

--- a/netlify.toml
+++ b/netlify.toml
@@ -23,3 +23,8 @@
 
 [context.next.environment]
   HUGO_ENABLEGITINFO = "true"
+
+[[redirects]]
+from = "/docs/rosa/prereq-list/"
+to = "https://docs.openshift.com/rosa/rosa_tutorials/rosa-mobb-prerequisites-tutorial.html"
+status = 301
