--- a/netlify.toml
+++ b/netlify.toml
@@ -28,3 +28,4 @@
 from = "/docs/rosa/prereq-list/"
 to = "https://docs.openshift.com/rosa/rosa_tutorials/rosa-mobb-prerequisites-tutorial.html"
 status = 301
+force = true
