fix: update npm start command

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "wireit": {
     "start": {
-      "command": "hugo serve",
+      "command": "hugo server --appendPort -D -b //localhost/experts/",
       "dependencies": [
         "bundle"
       ]
