--- a/netlify.toml
+++ b/netlify.toml
@@ -62,3 +62,9 @@ from = "/experts/rosa/prereq-list/"
 to = "https://docs.openshift.com/rosa/rosa_tutorials/rosa-mobb-prerequisites-tutorial.html"
 status = 301
 force = true
+
+# Redirect old Private Link tag to new PrivateLink tag
+from = "/experts/tags/private-link/"
+to = "/experts/tags/privatelink/"
+status = 301
+force = true
