add the missing redirects block

--- a/netlify.toml
+++ b/netlify.toml
@@ -64,6 +64,7 @@ status = 301
 force = true
 
 # Redirect old Private Link tag to new PrivateLink tag
+[[redirects]]
 from = "/experts/tags/private-link/"
 to = "/experts/tags/privatelink/"
 status = 301
