removed the MUO/ARO doc from the index file, added a note to the top of the MUO doc that tells users to go to official doc, added redirect in netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -124,3 +124,9 @@ from = "/experts/rosa/ack/"
 to = "https://docs.openshift.com/rosa/cloud_experts_tutorials/cloud-experts-using-aws-ack.html"
 status = 301
 force = true
+
+[[redirects]]
+from = "/experts/aro/managed-upgrade-operator/"
+to = "https://learn.microsoft.com/en-us/azure/openshift/howto-upgrade"
+status = 301
+force = true
