--- a/package.json
+++ b/package.json
@@ -21,29 +21,12 @@
   "bugs": {
     "url": "https://github.com/rh-mobb/documentation/issues"
   },
-  "dependencies": {
-    "@patternfly/elements": "^4.0.2",
-    "@rhds/elements": "^1.3.0"
-  },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.3.0",
-    "@rollup/plugin-terser": "^0.4.4",
-    "rollup": "^4.24.0",
-    "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-delete": "^2.1.0",
-    "rollup-plugin-import-css": "^3.5.5",
-    "rollup-plugin-minify-html-literals-v3": "^1.3.4",
     "wireit": "^0.14.9"
   },
   "wireit": {
     "start": {
-      "command": "hugo server --appendPort -D -b //localhost/experts/",
-      "dependencies": [
-        "bundle"
-      ]
-    },
-    "bundle": {
-      "command": "rollup -c rollup.config.js"
+      "command": "hugo server --appendPort -D -b //localhost/experts/"
     }
   }
 }
