fix: use hugo render hooks to override markdown highlight output

--- a/config.toml
+++ b/config.toml
@@ -44,7 +44,7 @@ enableGitInfo = true
   lineNoStart = 1
   lineNos = false
   lineNumbersInTable = true
-  noClasses = true
+  noClasses = false
   style = "emacs"
   tabWidth = 2
 
