fix: update red hat design system elements to 4.0 (#671)
* fix: use hugo render hooks to override markdown highlight output

* fix: remove old js copy for codeblock

* fix: update html css for new rhds version

* fix: remove uneeded bundle script

* fix: update config to allow for codeblock based scripts

--- a/config.toml
+++ b/config.toml
@@ -44,7 +44,7 @@ enableGitInfo = true
   lineNoStart = 1
   lineNos = false
   lineNumbersInTable = true
-  noClasses = true
+  noClasses = false
   style = "emacs"
   tabWidth = 2
 
@@ -54,3 +54,14 @@ enableGitInfo = true
       wrapStandAloneImageWithinParagraph = false
     [markup.goldmark.renderer]
       unsafe = true
+
+# json and js disabled to allow for code blocks containing these languages
+# otherwise hugo --gc --minify will fail
+[minify]
+  disableHTML = false
+  disableCSS = false
+  disableJS = true
+  disableJSON = true
+  disableSVG = false
+  disableXML = false
+  minifyOutput = false
